Fix doc deployement
Signed-off-by: Tomas Slusny <slusnucky@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,17 @@ hxml:
   - test.hxml
 
 script:
+  - haxe test.hxml
   - haxelib git dox https://github.com/HaxeFoundation/dox
-  - bash doc-deploy.sh
+  - rm -rf bin
+  - mkdir bin
+  - haxe dox.hxml
+
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $GH_TOKEN
+  keep_history: true
+  local_dir: bin/api
+  on:
+    branch: master
