Fix building of docs
Signed-off-by: Tomas Slusny <slusnucky@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ script:
   - haxelib git dox https://github.com/HaxeFoundation/dox
   - rm -rf bin
   - mkdir bin
-  - haxe dox.hxml
+  - haxe doc.hxml
 
 deploy:
   provider: pages
